<resources>
    <string name="app_name">T20 World Cup Points Table</string>
    <string name="group_2">Group 2</string>
    <string name="pos">POS</string>
    <string name="team">TEAM</string>
    <string name="played">PLAYED</string>
    <string name="won">WON</string>
    <string name="lost">LOST</string>
    <string name="n_r">N/R</string>
    <string name="tied">TIED</string>
    <string name="net_rr">NET/RR</string>
    <string name="points">POINTS</string>
    <string name="_1">1</string>
    <string name="pakistan">PAKISTAN</string>
    <string name="_4">4</string>
    <string name="_0">0</string>
    <string name="_1_065">+1.065</string>
    <string name="_8">8</string>
    <string name="_2">2</string>
    <string name="new_zealand">NEW ZEALAND</string>
    <string name="_3">3</string>
    <string name="_1_277">+1.277</string>
    <string name="_6">6</string>
    <string name="india">INDIA</string>
    <string name="_1_169">+1.169</string>
    <string name="_5">5</string>
    <string name="_1_851">-1.851</string>
    <string name="_3_494">-3.494</string>
    <string name="pakistan_squad">Pakistan squad</string>
    <string name="player">Player</string>
    <string name="born">Born</string>
    <string name="bat_bowl">Bat/bowl</string>
    <string name="babar_azam_captain">Babar Azam (captain)</string>
    <string name="lahore_15_10_1994">Lahore, 15/10/1994</string>
    <string name="abdullah_shaft">Abdullah Shaft</string>
    <string name="sialkot_20_11_1999">Sialkot, 20/11/1999</string>
    <string name="rhb_obb">RHB OB</string>
    <string name="abid_ali">Abid Ali</string>
    <string name="lahore_16_10_1987">Lahore, 16/10/1987</string>
    <string name="rhb_llb">RHB LB</string>
    <string name="arshad_iqbal">Arshad Iqbal</string>
    <string name="swabi_26_12_2000">Swabi, 26/12/2000</string>
    <string name="rhb_rrmf">RHB RMF</string>
    <string name="asif_ali">Asif Ali</string>
    <string name="faisalabad_01_10_1991">Faisalabad, 01/10/1991</string>
    <string name="rhb_rmf">RHB RMF</string>
    <string name="asif_afridi">Asif Afridi</string>
    <string name="peshawar_25_12_1986">Peshawar, 25/12/1986</string>
    <string name="lhb_sla">LHB SLA</string>
    <string name="azam_khan">Azam Khan</string>
    <string name="_10_08_1998">10/08/1998</string>
    <string name="rhhb_wk">RHB WK</string>
    <string name="rhb_wk">RHB WK</string>
    <string name="azhar_ali">Azhar Ali</string>
    <string name="lahore_19_02_1985">Lahore, 19/02/1985</string>
    <string name="rhb_lb">RHB LB</string>
    <string name="bilal_asif">Bilal Asif</string>
    <string name="sialkot_24_09_1985">Sialkot, 24/09/1985</string>
    <string name="rhb_ob">RHB OB</string>
    <string name="fahim_ashraf">Fahim Ashraf</string>
    <string name="kasur_16_01_1994">Kasur, 16/01/1994</string>
    <string name="lhb_rm">LHB RM</string>
    <string name="new_zealand_squad">New Zealand Squad</string>
    <string name="india_squad">India Squad</string>
    <string name="afghanistan_squad">Afghanistan Squad</string>
    <string name="namibia_squad">Namibia Squad</string>
    <string name="scotland_squad">Scotland Squad</string>
</resources>